# cloud-kv-repo

kv_server_1/: Cargo.toml  build.rs
kv_server_1/src/: client.rs  lib.rs  server.rs
kv_server_1/src/protos/: kvserver.rs  kvserver_grpc.rs  mod.rs
kv_server_1/src/protos/example/: kvserver.proto
kv_server_1/src/storage/: engine.rs  mod.rs
