[package]
name = "kv_server_1"
version = "0.1.0"
authors = ["dimstars <642870348@qq.com>"]
edition = "2018"
build = "build.rs"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
futures = "0.1.16"
grpcio = { version = "0.4", default-features = false, features = ["protobuf-codec"] }
protobuf = "2.0.2"
#crossbeam-channel = "0.2"

[build-dependencies]
protoc-grpcio = "1.0.1"
